# distributed-tic-tac-toe

./: README.md  compiler.txt  pyproject.toml
distributed_tic_tac_toe/: client.py  game_logic.py  server.py  tictactoe.proto  tictactoe_pb2.py  tictactoe_pb2_grpc.py
tests/: test_game_logic.py
