[tool.poetry]
name = "distributed-tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["tanogedler <contrerasgedler@gmail.com>"]
readme = "README.md"
packages = [{include = "distributed_tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
