[tool.poetry]
name = "distributed-tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["tanogedler <contrerasgedler@gmail.com>"]
readme = "README.md"
packages = [{include = "distributed_tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
pylint = "^2.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
